...

  const latestWeight =
    weightHistory?.length > 0 ? weightHistory[weightHistory.length - 1].value : null;

  return (
    <ScrollView className="flex-1 bg-background p-6">
      <ScreenHeader title="Twoje Zdrowie" />

      <GlassCard entering={FadeInUp.delay(100).springify()}>
        <Text className="text-foreground font-semibold text-lg mb-4">
          Ogólny Health Score: <Text className="text-brand font-bold">{healthScore}</Text>
        </Text>
        {healthBreakdown && (
...
